Tests/Should_succeed/1_IO/2_WriteInt.decaf
class Test {
	void main(){
		WriteInt(5);
		WriteString("=");
		WriteInt(5);
		WriteString("\n");
	}
}