tests/Should_fail/5_Functions/06_FunctionNotExists.decaf
class Test {
	void main(){
		m1();
	}
}